refactored notebook into package and added chatapp demo and fast api endpoint

--- a/notebooks/0.0-MJ-pinochio-sandbox.ipynb
+++ b/notebooks/0.0-MJ-pinochio-sandbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3deb7138",
    "metadata": {},
    "outputs": [
@@ -18,16 +18,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest lake in California is **Salton Sea**, located in the southeastern part of the state. It covers an area of approximately **343 square miles (888 square kilometers)**, though its size can fluctuate due to changes in water inflow and evaporation.\n",
+      "The largest lake in California is **Salton Sea**, located in the southern part of the state.\n",
       "\n",
-      "Originally formed by an accidental flood from the Colorado River in 1905, the Salton Sea is a saline, endorheic (no outlet) lake. While it is the largest lake in California by surface area, it is not a natural freshwater lake like some others in the state.\n",
+      "- **Surface Area:** Approximately 343 square miles (though it fluctuates due to evaporation and water inflow).\n",
+      "- **Formation:** It was created accidentally in 1905 when an irrigation canal breach caused the Colorado River to flood the Salton Basin for nearly two years.\n",
+      "- **Current Status:** The Salton Sea is a saline lake with no natural outlet, and its water levels have been declining due to reduced agricultural runoff and drought conditions.\n",
       "\n",
-      "Other notable large lakes in California include:\n",
-      "- **Lake Tahoe** (the largest freshwater lake by volume, shared with Nevada)\n",
-      "- **Clear Lake** (the largest natural freshwater lake entirely within California)\n",
-      "- **Mono Lake** (a large saline lake in Eastern California)\n",
-      "\n",
-      "Would you like more details on any of these lakes?\n"
+      "While **Lake Tahoe** is more famous and deeper, the Salton Sea holds the title for the largest lake by surface area in California.\n"
      ]
     }
    ],
@@ -63,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3450814a",
    "metadata": {},
    "outputs": [],
@@ -104,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4c4a42ad",
    "metadata": {},
    "outputs": [],
@@ -119,7 +116,7 @@
     "\n",
     "class NLIClient:\n",
     "    def __init__(self, model: str = \"nli-deberta-v3-small\"):\n",
-    "        self.pipeline = self.pipeline()\n",
+    "        self.pipeline = self.get_nli_pipeline()\n",
     "        self.model: str = model\n",
     "        self.supported_models = [\"nli-deberta-v3-small\"]\n",
     "        if model not in self.supported_models:\n",
@@ -127,7 +124,7 @@
     "                f\"NLI Pipeline not implemented for model: {self.supported_models}\"\n",
     "            )\n",
     "\n",
-    "    def pipeline(self, model=\"nli-deberta-v3-small\"):\n",
+    "    def get_nli_pipeline(self, model=\"nli-deberta-v3-small\"):\n",
     "        from transformers import pipeline\n",
     "\n",
     "        return pipeline(\n",
@@ -189,7 +186,7 @@
     "    ):\n",
     "        self.prompts: Prompts = prompts\n",
     "        self.llm_client: LLMClient = llm_client\n",
-    "        self.nli_client: NLIClient = nli_client.pipeline\n",
+    "        self.nli_client: NLIClient = nli_client\n",
     "        self.k: int = k\n",
     "        self.alpha: float = alpha\n",
     "        self.beta: float = beta\n",
@@ -273,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "3648b7c4",
    "metadata": {},
    "outputs": [
@@ -283,6 +280,21 @@
      "text": [
       "Device set to use mps:1\n"
      ]
+    },
+    {
+     "ename": "SDKError",
+     "evalue": "API error occurred: Status 401\n{\n  \"message\":\"Unauthorized\",\n  \"request_id\":\"d472795294df8b50b6853a7563beb043\"\n}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mSDKError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m test_question = \u001b[33m\"\u001b[39m\u001b[33mHow many survivors were there on the Titanic?\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      2\u001b[39m nop = NoPinochio(llm_client=LLMClient(), nli_client=NLIClient(),prompts=Prompts(), question=test_question)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m conf = \u001b[43mnop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_confidence\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 146\u001b[39m, in \u001b[36mNoPinochio.get_confidence\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    145\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_confidence\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m146\u001b[39m     \u001b[38;5;28mself\u001b[39m.answer: \u001b[38;5;28mstr\u001b[39m = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mllm_client\u001b[49m\u001b[43m.\u001b[49m\u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    147\u001b[39m \u001b[43m        \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmin\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m    148\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    149\u001b[39m     k_sampled_answers = \u001b[38;5;28mself\u001b[39m._get_k_responses()\n\u001b[32m    150\u001b[39m     o = \u001b[38;5;28mself\u001b[39m._calc_observed_consistency(k_sampled_answers=k_sampled_answers)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 42\u001b[39m, in \u001b[36mLLMClient.chat\u001b[39m\u001b[34m(self, question, temperature)\u001b[39m\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.client == \u001b[33m\"\u001b[39m\u001b[33mmistral\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m     41\u001b[39m     temperature = \u001b[38;5;28mself\u001b[39m.get_temp[\u001b[38;5;28mself\u001b[39m.client][temperature]\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mget_mistral_answer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 47\u001b[39m, in \u001b[36mLLMClient.get_mistral_answer\u001b[39m\u001b[34m(self, question, temperature)\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_mistral_answer\u001b[39m(\n\u001b[32m     45\u001b[39m     \u001b[38;5;28mself\u001b[39m, question:\u001b[38;5;28mstr\u001b[39m, temperature: \u001b[38;5;28mfloat\u001b[39m):\n\u001b[32m     46\u001b[39m     client = Mistral(api_key=os.environ[\u001b[33m\"\u001b[39m\u001b[33mMISTRAL_API_KEY\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m     chat_response = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mchat\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcomplete\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     48\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     49\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     50\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmessages\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\n\u001b[32m     51\u001b[39m \u001b[43m            \u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m     52\u001b[39m \u001b[43m                \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrole\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43muser\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     53\u001b[39m \u001b[43m                \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcontent\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     54\u001b[39m \u001b[43m            \u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     55\u001b[39m \u001b[43m        \u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     56\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     57\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m chat_response.choices[\u001b[32m0\u001b[39m].message.content\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/development/no_pinochio/.venv/lib/python3.12/site-packages/mistralai/chat.py:243\u001b[39m, in \u001b[36mChat.complete\u001b[39m\u001b[34m(self, model, messages, temperature, top_p, max_tokens, stream, stop, random_seed, response_format, tools, tool_choice, presence_penalty, frequency_penalty, n, prediction, parallel_tool_calls, safe_prompt, retries, server_url, timeout_ms, http_headers)\u001b[39m\n\u001b[32m    241\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m utils.match_response(http_res, \u001b[33m\"\u001b[39m\u001b[33m4XX\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m*\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    242\u001b[39m     http_res_text = utils.stream_to_text(http_res)\n\u001b[32m--> \u001b[39m\u001b[32m243\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m models.SDKError(\n\u001b[32m    244\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mAPI error occurred\u001b[39m\u001b[33m\"\u001b[39m, http_res.status_code, http_res_text, http_res\n\u001b[32m    245\u001b[39m     )\n\u001b[32m    246\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m utils.match_response(http_res, \u001b[33m\"\u001b[39m\u001b[33m5XX\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m*\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    247\u001b[39m     http_res_text = utils.stream_to_text(http_res)\n",
+      "\u001b[31mSDKError\u001b[39m: API error occurred: Status 401\n{\n  \"message\":\"Unauthorized\",\n  \"request_id\":\"d472795294df8b50b6853a7563beb043\"\n}"
+     ]
     }
    ],
    "source": [
@@ -290,48 +302,6 @@
     "test_question = \"How many survivors were there on the Titanic?\"\n",
     "nop = NoPinochio(llm_client=LLMClient(), nli_client=NLIClient(),prompts=Prompts(), question=test_question)\n",
     "conf = nop.get_confidence()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "972318e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The exact number of survivors from the sinking of the RMS Titanic on April 15, 1912, is approximately **706** out of the estimated **2,224** passengers and crew on board.\\n\\nHere’s a breakdown:\\n- **Total on board:** ~2,224 (passengers and crew)\\n- **Survivors:** ~706\\n- **Fatalities:** ~1,517\\n\\nThe survival rate was influenced by factors such as class, gender, and age, with women and children in first class having the highest survival rates. The lifeboats were not filled to capacity, and many passengers, particularly men in lower classes, perished due to the \"women and children first\" protocol and the lack of sufficient lifeboats.\\n\\nWould you like more details on specific groups (e.g., by class or gender)?'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nop.answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "345c4bda",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.7466629470392945)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conf"
    ]
   },
   {
@@ -946,7 +916,6 @@
    "id": "1783e949",
    "metadata": {},
    "source": [
-    "# next action, orga code\n",
     "# second next, fix NLI token limitation\n",
     "# third next, add quality score\n",
     "# fourth next add eval study"
