--- a/notebooks/0.0-MJ-pinochio-sandbox.ipynb
+++ b/notebooks/0.0-MJ-pinochio-sandbox.ipynb
@@ -173,7 +173,7 @@
     "        return chat_response.choices[0].message.content\n",
     "\n",
     "\n",
-    "class NoPinochio:\n",
+    "class NoPinocchio:\n",
     "    def __init__(\n",
     "        self,\n",
     "        prompts: Prompts,\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3648b7c4",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
    "source": [
     "\n",
     "test_question = \"How many survivors were there on the Titanic?\"\n",
-    "nop = NoPinochio(llm_client=LLMClient(), nli_client=NLIClient(),prompts=Prompts(), question=test_question)\n",
+    "nop = NoPinocchio(llm_client=LLMClient(), nli_client=NLIClient(),prompts=Prompts(), question=test_question)\n",
     "conf = nop.get_confidence()"
    ]
   },
